--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.12.0", features = ["dynamic_linking"] }
+bevy-inspector-egui = "0.21.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
@@ -15,3 +16,7 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+# bevy-inspector 0.12.0 does not compile unless: 
+[profile.dev.package."bevy-inspector-egui"]
+        opt-level = 1
