--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.12.0", features = ["dynamic_linking"] }
 bevy-inspector-egui = "0.21.0"
+bevy_window = "0.12.1"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
